tests/errors/invalid_uescape0.pyx

u'\u'

_ERRORS = '''
2:1: Invalid unicode escape '\u'
'''
